Adding a simpler service that currently returns a short code to indicate shorter uri

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,8 @@ services:
     build: ./bookmarks-manager
     ports:
       - "8080:8080"
+  urishortner:
+    build: ./uri-shortner
+    ports:
+      - "8081:8081"
     
