--- a/uri-shortner/pom.xml
+++ b/uri-shortner/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.priyaaank.distributedsystempatterns</groupId>
-	<artifactId>bookmarks-manager</artifactId>
+	<artifactId>uri-shortner</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>bookmarks-manager</name>
-	<description>A simple and personal bookmarks manager</description>
+	<name>uri-shortner</name>
+	<description>A simple service to shorten uri</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -39,10 +39,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
 		</dependency>
 	</dependencies>
 
