--- a/bookmarks-manager/src/main/resources/application.properties
+++ b/bookmarks-manager/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8080
+management.endpoints.web.exposure.include=health,info,prometheus
 
 services.urlshortner.hostport=http://urlshortner:8081/
