--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,16 @@ services:
   prometheus:
     image: prom/prometheus:v2.32.1
     hostname: prometheus
+    volumes:
+      - ./config/etc/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./data/prometheus/:/prometheus
     ports:
       - "9090:9090"
   grafana:
     image: grafana/grafana:8.3.2
     hostname: grafana
+    volumes:
+      - ./data/grafana/:/var/lib/grafana
     ports:
       - "3000:3000"
     
