Made delay and failure probability configurable

--- a/tagging-service/src/main/resources/application.properties
+++ b/tagging-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8082
 management.endpoints.web.exposure.include=health,info,prometheus
-config.failurePercent=20
+config.failurePercent=60
+config.delay.millis=10000
