--- a/tagging-service/src/main/resources/application.properties
+++ b/tagging-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8082
 management.endpoints.web.exposure.include=health,info,prometheus
-config.failurePercent=60
-config.delay.millis=10000
+config.failurePercent=0
+config.random.delay.millis=0
+
+config.tps.penalty.delay.millis=10000
+config.tps=10
