Added circuit breaker enable config. Moved HTTP retry handler and added a failover function concept to circuit breaker

--- a/bookmarks-manager/src/main/resources/application.properties
+++ b/bookmarks-manager/src/main/resources/application.properties
@@ -3,5 +3,7 @@ management.endpoints.web.exposure.include=health,info,prometheus
 
 http.retry.count=0
 
+circuitbreaker.enabled=true
+
 services.urlshortner.hostport=http://urlshortner:8081/
 services.tagservice.hostport=http://taggingservice:8082/
