--- a/bookmarks-manager/src/main/resources/application.properties
+++ b/bookmarks-manager/src/main/resources/application.properties
@@ -4,6 +4,7 @@ management.endpoints.web.exposure.include=health,info,prometheus
 http.retry.count=0
 
 circuitbreaker.enabled=true
+circuitbreaker.failOver.enabled=true
 
 services.urlshortner.hostport=http://urlshortner:8081/
 services.tagservice.hostport=http://taggingservice:8082/
