Adding configs to ensure transient failures can be visualized

--- a/bookmarks-manager/src/main/resources/application.properties
+++ b/bookmarks-manager/src/main/resources/application.properties
@@ -3,8 +3,8 @@ management.endpoints.web.exposure.include=health,info,prometheus
 
 http.retry.count=0
 
-circuitbreaker.enabled=true
-circuitbreaker.failOver.enabled=true
+circuitbreaker.enabled=false
+circuitbreaker.failOver.enabled=false
 
 services.urlshortner.hostport=http://urlshortner:8081/
 services.tagservice.hostport=http://taggingservice:8082/
