--- a/tagging-service/src/main/resources/application.properties
+++ b/tagging-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8082
 management.endpoints.web.exposure.include=health,info,prometheus
-config.failurePercent=0
-config.random.delay.millis=0
+config.failurePercent=10
+config.random.delay.millis=10000
 
-config.tps.penalty.delay.millis=10000
-config.tps=10
+config.tps.control.enabled=false
+config.tps.penalty.delay.millis=0
+config.tps=1000
