--- a/bookmarks-manager/src/main/resources/application.properties
+++ b/bookmarks-manager/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8080
 management.endpoints.web.exposure.include=health,info,prometheus
 
-http.retry.count=3
+http.retry.count=0
+
+circuitbreaker.enabled=true
+circuitbreaker.failOver.enabled=false
 
 services.urlshortner.hostport=http://urlshortner:8081/
 services.tagservice.hostport=http://taggingservice:8082/
