--- a/uri-shortner/src/main/resources/application.properties
+++ b/uri-shortner/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8081
 management.endpoints.web.exposure.include=health,info,prometheus
 batchFilePath=bookmarks.txt
 extract.text.mode.batch=true
-extract.text.rateControl=false
+services.gateway.hostport=http://bookmarksmanager:8080/
