--- a/uri-shortner/src/main/resources/application.properties
+++ b/uri-shortner/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8081
 management.endpoints.web.exposure.include=health,info,prometheus
 batchFilePath=bookmarks.txt
+extract.text.mode.batch=false
+services.gateway.hostport=http://bookmarksmanager:8080/
