--- a/uri-shortner/src/main/resources/application.properties
+++ b/uri-shortner/src/main/resources/application.properties
@@ -3,3 +3,8 @@ management.endpoints.web.exposure.include=health,info,prometheus
 batchFilePath=bookmarks.txt
 extract.text.mode.batch=true
 services.gateway.hostport=http://bookmarksmanager:8080/
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
