--- a/uri-shortner/src/main/resources/application.properties
+++ b/uri-shortner/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+config.queue.max.size=1000
+config.queue.reject.enabled=false
