Keeping only the parts needed for backpressure demo

--- a/bookmarks-manager/src/main/resources/application.properties
+++ b/bookmarks-manager/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include=health,info,prometheus
 
 http.retry.count=0
 
-circuitbreaker.enabled=false
+circuitbreaker.enabled=true
 circuitbreaker.failOver.enabled=false
 
 services.urlshortner.hostport=http://urlshortner:8081/
