Enable queue rejection

--- a/uri-shortner/src/main/resources/application.properties
+++ b/uri-shortner/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 config.queue.max.size=1000
-config.queue.reject.enabled=false
+config.queue.reject.enabled=true
